REMOVE previously added styles for fixing dice-roll issues on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,11 +95,11 @@ h1,
     left: 0;
     right: 0;
     bottom: 0;
-    width: 100vw !important;
-    height: 100vh !important;
+    width: 100%;
+    height: 100%;
     z-index: 1000;
     pointer-events: none;
-    display: block !important;
+    display: block;
 }
 
 @media (max-width: 576px) {
